--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <title>login</title>
+    
 </head>
 <body>
     <main>
         <section id="login">
-            <div id="imagem">
-                foto
+            <div id="imagem"> 
+                <!-- Aqui vai a imagem nas css -->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
